# better-graphs

./: .gitignore  CLAUDE.md  PLAN.md  README.md  VISUALIZATION_GUIDE.md  pyproject.toml
.claude/skills/house-charts/: SKILL.md
.github/workflows/: publish.yml
assets/: readme_figures.py
data/: README.md  build_datasets.py
visualization-curriculum/: better_graphs.qmd  house_style.py  minerva.mplstyle  ndata.py
